Fix form layout and spacing.

--- a/src/scss/layout/_design.scss
+++ b/src/scss/layout/_design.scss
@@ -2,7 +2,7 @@
   &__paletteslist {
     list-style-type: none;
   }
-  &__paletteslist > * {
+  &__paletteslist > *:not(:last-child) {
     margin-bottom: 1rem;
   }
   &__paletteItem {
