--- a/src/scss/layout/_fill.scss
+++ b/src/scss/layout/_fill.scss
@@ -3,8 +3,14 @@
     list-style-type: none;
     display: flex;
     flex-direction: column;
-    margin-top: 18px;
     margin-inline: var(--spacing-1);
+
+    input {
+      padding: var(--spacing-1);
+    }
+  }
+  &__item:not(:first-child) {
+    margin-top: 18px;    
   }
 
   &__designinput {
